Added new msg interface for controlling the EGO Vehicle.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/VehicleControl.msg"
+  "msg/EgoVehicleControl.msg"
   DEPENDENCIES std_msgs
 )
 
